unpackaged/objects/Scholarships__c.object
<CustomObject>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Airfare__c</fullName>
        <label>Airfare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brief_program_description_reasons2__c</fullName>
        <inlineHelpText>Brief program description &amp; reasons you have chosen it (max. 150 words)</inlineHelpText>
        <label>Brief program description &amp; reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brief_program_description_reasons__c</fullName>
        <inlineHelpText>Brief program description &amp; reasons you have chosen it (max. 150 words)</inlineHelpText>
        <label>Brief program description &amp; reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Scholarships</relationshipLabel>
        <relationshipName>Scholarships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_CAP__c</fullName>
        <inlineHelpText>Non-freshmen: please include in your email submission a transcript (generated through MySIS) reflecting coursework and grades at Yale-NUS so far.</inlineHelpText>
        <label>Current CAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_any_other_prior_exposure__c</fullName>
        <inlineHelpText>Describe any other prior exposure you have had to this language (independent study, travel in countries where the language is spoken, living with host family, etc.).</inlineHelpText>
        <label>Describe any other prior exposure</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End2__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experience_of_other_languages__c</fullName>
        <inlineHelpText>Briefly list any experience you have had with the study of other languages.</inlineHelpText>
        <label>Experience of other languages</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Institution_Name2__c</fullName>
        <label>Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <label>Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_of_Study__c</fullName>
        <label>Language of Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_other_liberal_arts_colleges2__c</fullName>
        <inlineHelpText>List of other liberal arts colleges/universities which have endorsed this program</inlineHelpText>
        <label>List of other liberal arts colleges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_other_liberal_arts_colleges__c</fullName>
        <inlineHelpText>List of other liberal arts colleges/universities which have endorsed this program</inlineHelpText>
        <label>List of other liberal arts colleges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location2__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Credits_Awarded_by_Program2__c</fullName>
        <label>Number of Credits Awarded by Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Credits_Awarded_by_Program__c</fullName>
        <label>Number of Credits Awarded by Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Instructional_Hours2__c</fullName>
        <label>Number of Instructional Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Instructional_Hours__c</fullName>
        <label>Number of Instructional Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks2__c</fullName>
        <label>Number of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Weeks__c</fullName>
        <label>Number of Weeks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Misc_Costs__c</fullName>
        <label>Other Misc Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Application_Deadline2__c</fullName>
        <label>Program Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Application_Deadline__c</fullName>
        <label>Program Application Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name2__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Essay__c</fullName>
        <inlineHelpText>How would this opportunity fit into your academic, professional, and/or personal development goals? (250-300 words)</inlineHelpText>
        <label>Short Essay</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start2__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled by Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scholarship</relationshipLabel>
        <relationshipName>Scholarships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <label>Transportation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuition__c</fullName>
        <label>Tuition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
                <value>
                    <fullName>Summer Academic Scholarship</fullName>
                </value>
                <value>
                    <fullName>Summer Arts Scholarship</fullName>
                </value>
                <value>
                    <fullName>Summer Language Studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL2__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Scholarships</label>
    <nameField>
        <displayFormat>SCID-{00000000}</displayFormat>
        <label>Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scholarships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>